# PySimSAR

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.specify/: init-options.json
.specify/memory/: constitution.md
demos/: README.md  demo_phase3.py  demo_phase6.py
docs/: architecture.md  changelog.md  configuration.md  data-structures.md  getting-started.md  index.md  known-issues.md
docs/api/: algorithms.md  core.md  io.md  pipeline.md  simulation.md
docs/customization/: algorithms.md  scripting.md  sensors.md  waveforms.md
docs/examples/: batch_simulation.py  custom_algorithm.py  custom_scene.py  headless_quickstart.py  quickstart_stripmap.py
docs/math/: autofocus.md  geocoding.md  image-formation.md  motion-compensation.md  notation.md  polarimetry.md  signal-model.md
examples/scenarios/: SCENARIOS.md  _scene.json
pySimSAR/: __init__.py
pySimSAR/algorithms/: base.py  registry.py
pySimSAR/clutter/: __init__.py  base.py  registry.py  uniform.py
pySimSAR/core/: __init__.py  calculator.py  coordinates.py  flight_path.py  platform.py  radar.py  rcs_model.py  scene.py  types.py
pySimSAR/gui/: __init__.py  __main__.py  app.py
pySimSAR/io/: archive.py  config.py  hdf5_format.py  parameter_set.py  user_data.py
pySimSAR/motion/: __init__.py  perturbation.py  trajectory.py
pySimSAR/pipeline/: __init__.py  runner.py
pySimSAR/sensors/: __init__.py  gps.py  gps_gaussian.py  imu.py  imu_white_noise.py  nav_data.py  registry.py
pySimSAR/simulation/: __init__.py  _fast_echo.py  antenna.py  engine.py  (+1 more)
tests/: conftest.py
(+231 files in other folders)
