[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pySimSAR"
version = "0.1.0"
description = "Python SAR raw signal simulator with modular processing algorithms"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5",
    "matplotlib>=3.7",
    "pyqtgraph>=0.13",
    "PyOpenGL>=3.1",
    "trimesh>=3.20",
]
dev = [
    "pytest>=7.3",
    "pytest-qt>=4.2",
    "ruff>=0.1",
    "pySimSAR[gui]",
]

[project.scripts]
pysimsar = "pySimSAR.gui.app:main"

[tool.setuptools.packages.find]
include = ["pySimSAR*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["N999"]  # pySimSAR uses intentional camelCase package name

[tool.ruff.lint.isort]
known-first-party = ["pySimSAR"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default, run with '-m slow')",
]
